--- a/Feature_extraction_first_half.ipynb
+++ b/Feature_extraction_first_half.ipynb
@@ -55,7 +55,7 @@
    "hash": "bb38d5b4d08a2723439448612af8785ba68ac82fdd75f5df8cb82c641271b800"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.0 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -69,10 +69,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
-  },
-  "orig_nbformat": 4
+   "version": "3.10.4"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
