--- a/Model_selection.ipynb
+++ b/Model_selection.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Mahmoud Seleem\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\librosa\\core\\spectrum.py:222: UserWarning: n_fft=2048 is too small for input signal of length=5\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import scipy.stats\n",
@@ -16,16 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['n', 'a', 'm', 'a', 'n', 'm', 'm']\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -292,7 +294,7 @@
        "[7 rows x 26 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
