renaming final notebook, typo fixing

--- a/HS_Classification_Main.ipynb
+++ b/HS_Classification_Main.ipynb
@@ -939,7 +939,7 @@
    ],
    "source": [
     "from notebook_utils import compare\n",
-    "from clasifiers import classifiers\n",
+    "from classifiers import classifiers\n",
     "\n",
     "params = compare(classifiers, X, y)"
    ]
